unpackaged/main/default/objects/Hospital_in_a_Distributor__c/Hospital_in_a_Distributor__c.object-meta.xml
<CustomObject>
    <label>Hospital in a Distributor</label>
    <nameField>
        <displayFormat>DH{0000}</displayFormat>
        <label>Hospital in a Distributor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hospitals in Distributors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>