unpackaged/main/default/objects/Hospital_in_a_Distributor__c/fields/Contract_2_Products__c.field-meta.xml
<CustomField>
    <fullName>Contract_2_Products__c</fullName>
    <formula>TEXT ( Distributor__r.Contract_2_Products__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract 2 Products</label>
    <type>Text</type>
</CustomField>