unpackaged/main/default/objects/Hospital_in_a_Distributor__c/fields/Contract_2_Valid_Until__c.field-meta.xml
<CustomField>
    <fullName>Contract_2_Valid_Until__c</fullName>
    <formula>Distributor__r.Contract_2_Valid_Until__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract 2 Valid Until</label>
    <type>Date</type>
</CustomField>