unpackaged/main/default/objects/Hospital_in_a_Distributor__c/fields/Distributor_State__c.field-meta.xml
<CustomField>
    <fullName>Distributor_State__c</fullName>
    <formula>Distributor__r.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State</label>
    <type>Text</type>
</CustomField>