unpackaged/main/default/objects/Hospital_in_a_Distributor__c/fields/Hosp_Street__c.field-meta.xml
<CustomField>
    <fullName>Hosp_Street__c</fullName>
    <label>Hosp_Street</label>
    <length>50</length>
    <type>Text</type>
</CustomField>