unpackaged/main/default/objects/Hospital_in_a_Distributor__c/fields/Hospital__c.field-meta.xml
<CustomField>
    <fullName>Hospital__c</fullName>
    <label>Hospital</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Distributor</relationshipLabel>
    <relationshipName>Hospitals_in_Distributors</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>