unpackaged/main/default/objects/Hospital_in_a_Distributor__c/fields/Hospital_City__c.field-meta.xml
<CustomField>
    <fullName>Hospital_City__c</fullName>
    <formula>Hospital__r.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City</label>
    <type>Text</type>
</CustomField>