unpackaged/main/default/objects/Hospital_in_a_Distributor__c/fields/Hospital_State__c.field-meta.xml
<CustomField>
    <fullName>Hospital_State__c</fullName>
    <formula>Hospital__r.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State</label>
    <type>Text</type>
</CustomField>