unpackaged/main/default/objects/Hospital_in_a_Distributor__c/fields/Incentive_Type__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Type__c</fullName>
    <formula>Text(Hospital__r.Incentive_Type__c)</formula>
    <label>Incentive Type</label>
    <type>Text</type>
</CustomField>